# pyhub-llm

./: .coderabbit.yaml  .gitignore  CHEATSHEET-ADVANCED.md  CHEATSHEET-BASIC.md  CHEATSHEET-INTERMEDIATE.md  CHEATSHEET.md  CLAUDE.md  CONTRIBUTING.md  MCP_TEST_ISSUES.md  Makefile  OBSERVABILITY.md  README.md  REFACTORING_PROPOSAL.md  TODO_MCP_INTEGRATION.md  bug-openai-tokens.py  mkdocs.yml  pyproject.toml  t.py  test_issue_fix.py
.claude/: settings.local.json
.github/workflows/: publish.yml
docs/: MIGRATION.md  README.md  batch-processing.md  cache-injection.md  cache-strategy.md  index.md  mcp_resource_management.md  retry.md
docs-build/: 404.html  index.html  objects.inv  sitemap.xml
docs-build/cache-injection/: index.html
docs-build/cache-strategy/: index.html
docs-build/examples/: index.html
docs-build/examples/00-before-you-start/: index.html
docs-build/examples/01-hello-llm/: index.html
docs-build/examples/02-everyday-tasks/: index.html
docs-build/examples/03-conversations/: index.html
docs-build/examples/08-real-projects/: index.html
docs-build/getting-started/: index.html
docs-build/getting-started/installation/: index.html
docs-build/getting-started/quickstart/: index.html
docs-build/guides/: index.html
docs-build/guides/advanced/: index.html
docs-build/guides/basic-usage/: index.html
docs-build/guides/conversation/: index.html
docs-build/guides/providers/: index.html
docs-build/guides/structured-output/: index.html
docs-build/mcp_resource_management/: index.html
docs-build/search/: search_index.json
docs/assets/stylesheets/: extra.css
docs/examples/: index.md
docs/examples/00-before-you-start/: api-keys-explained.md  index.md  python-basics.md
docs/examples/01-hello-llm/: first-chat.md  index.md  understanding-responses.md  what-is-llm.md
docs/examples/02-everyday-tasks/: ai-assistant.md  index.md  summarizer.md  text-improver.md  translator.md
docs/examples/03-conversations/: chatbot-basics.md  index.md  remembering-context.md
docs/examples/08-real-projects/: index.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guides/: advanced.md  basic-usage.md  conversation.md  index.md  providers.md  structured-output.md
examples/: README.md  display_demo.py  history_backup_example.py  image_generation_async.py  mcp_config_example.json  mcp_config_example.yaml  mcp_integration_example.py  mcp_policy_example.py  retry_examples.py  run_examples.py  test_examples.py
examples/advanced/: 01_embeddings.py  02_chaining.py  04_advanced_error_handling.py  15_hub_prompts.py  README.md  requirements.txt
examples/advanced/03_web_frameworks/: django_image_generation.py
examples/advanced/05_practical_examples/: chatbot.py  code_reviewer.py  document_summarizer.py  qa_system.py  translator.py
examples/advanced/06_code_interpreter/: 01_basic_analysis.py  02_visualization.py  03_session_based.py  04_multi_tool.py  05_docker_backend.py  README.md
examples/basic/: 01_hello_world.py  02_streaming.py  03_conversation.py  04_file_processing.py  05_error_handling.py  05_image_generation.py  07_batch_processing.py  README.md  requirements.txt
examples/fastapi/: .env.example  Dockerfile  README.md  README_TEST.md  advanced.py  conftest.py  docker-compose.yml  main.py  nginx.conf  pytest.ini  requirements.txt  run_tests.sh
examples/fastapi/client_examples/: javascript_client.js  python_client.py
examples/fastapi/middleware/: __init__.py  auth.py  rate_limit.py
examples/fastapi/services/: __init__.py  chat.py  translation.py
examples/fastapi/tests/: conftest.py  test_advanced.py  test_main.py
examples/mcp-servers/: README.md  docker-compose.yml  requirements.txt
examples/mcp-servers/client_examples/: test_all_transports.py  usage_examples.py
examples/mcp-servers/http/: http_server.py  run.sh
examples/mcp-servers/sse/: run.sh  sse_server.py
examples/mcp-servers/stdio/: calculator_server.py  run.sh
examples/mcp-servers/websocket/: run.sh  ws_server.py
src/pyhub/: __init__.py
src/pyhub/llm/: __init__.py  anthropic.py  base.py  display.py  exceptions.py  (+12 more)
tests/: conftest.py  test_actual_cleanup.py  test_agent_tool_conversion.py  test_anthropic_provider.py  test_ask_file_argument.py  test_batch.py  test_cache.py  test_cache_injection.py  test_cli_chat.py  test_cli_compare.py  test_cli_describe.py  test_cli_embed.py  test_cli_main.py  test_database_operations.py  test_describe_image.py  test_describe_images_refactor.py  test_display.py  test_display_reply_handling.py  test_django_integration.py  test_eval_safety.py  test_factory.py  test_google_import.py  test_google_provider.py  test_history_backup.py  test_hub.py  test_image_generation.py  test_integration.py  test_json_schema_special_chars.py  test_llm.py  test_mcp_client_config.py  test_mcp_config_factory.py  test_mcp_config_loader.py  test_mcp_connection_policy.py  test_mcp_file_integration.py  test_mcp_finalizer.py  test_mcp_integration.py  test_mcp_integration_cleanup.py  test_mcp_none_config.py  test_mcp_resource_cleanup.py  test_mcp_resource_tracking.py  (+17 more)
tests/test_code_interpreter/: __init__.py  test_code_interpreter_tool.py  test_docker_backend.py  test_local_backend.py  test_security.py  test_tool_context.py  test_tool_direct.py  test_tool_error_recovery.py  test_tool_pandas.py  test_tool_sessions.py  test_tool_visualization.py  test_tool_workflow.py
tests/test_tracing/: test_auto_config.py  test_base.py  test_integration.py
(+81 files in other folders)
