[project]
name = "pyhub-llm"
version = "0.7.2"
description = "Standalone LLM library with support for multiple providers"
authors = [{name = "PyHub Team", email = "me@pyhub.kr"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["llm", "ai", "openai", "anthropic", "google", "ollama", "agent", "mcp", "react"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "toml>=0.10.0",
    "aiofiles>=23.0.0",
    "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/pyhub-kr/pyhub-llm"
Documentation = "https://github.com/pyhub-kr/pyhub-llm#readme"
Repository = "https://github.com/pyhub-kr/pyhub-llm"
Issues = "https://github.com/pyhub-kr/pyhub-llm/issues"

[project.optional-dependencies]
openai = ["openai>=1.84.0"]
anthropic = ["anthropic>=0.52.0"]
google = ["google-genai>=1.19.0"]
ollama = ["ollama>=0.5.0", "PyMuPDF"]
upstage = ["openai>=1.84.0"]
pdf = ["PyMuPDF>=1.23.0"]
mcp = ["mcp", "fastmcp", "uvicorn", "pyyaml>=6.0.0"]
all = [
    "pyhub-llm[openai]",
    "pyhub-llm[anthropic]",
    "pyhub-llm[google]",
    "pyhub-llm[ollama]",
    "pyhub-llm[upstage]",
    "pyhub-llm[pdf]",
    "pyhub-llm[mcp]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-glightbox",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-autorefs>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.7.0",
    "pymdown-extensions>=10.0",
]
build = ["setuptools", "wheel", "build", "twine"]


[project.scripts]
pyhub-llm = "pyhub.llm.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyhub"]
exclude = ["**/__pycache__", "**/.DS_Store"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --disable-warnings"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 120
target-version = "py310"

# https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
indent = 2
